--- a/proposal_latex/proposal.tex
+++ b/proposal_latex/proposal.tex
@@ -162,38 +162,14 @@ The following sections will outline the steps required and the tools used in ord
 \subsection{Research Objectives}
 \label{subsec:researchobjectives}
 
+Proof-of-principle
+Demonstrating that some QML algorithms can already be used for solving small problems
 
+tackling the many problems that are often not adressed in QML algorithm papers like data encoding, quantum noise, the constitution of the data (sparse, low-rank, uniformly distributed) by implementing it from start to end and having to encount them
 
+Ideally demonstrate quantum advantages over the classical counterparts
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+Provide supporting evidence for the claim that QML can indeed be used to solve ML problems and that upscaling QT will bring the expected speed-ups in computation
 
 %implement the circuit in a quantum system (ideally on a real QC otherwise simulate it in Liquid)
 %many QML algorithms assume the data to already be prepared in some particular quantum data format and also assume all kind of other things
