--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -63,7 +63,7 @@ year = {2014}
 author={IBM},
 title = {What is big data?},
 howpublished = {\url{https://www-01.ibm.com/software/data/bigdata/what-is-big-data.html}},
-  note = {Accessed: 2016-09-08},
+note = {Accessed: 2016-09-08},
 year={2016}
 }
 
@@ -71,7 +71,7 @@ year={2016}
 author={D-Wave},
 title = {Breaking through 1000 Qubits },
 howpublished = {\url{http://www.dwavesys.com/blog/2015/06/breaking-through-1000-qubits}},
-  note = {Accessed: 2010-09-08},
+note = {Accessed: 2016-09-09},
 year={2015}
 }
 
@@ -181,3 +181,10 @@ year = {2015}
   publisher={Cambridge University Press}
 }
 
+@misc{quantiki,
+author={Quantiki},
+title = {List of quantum computing simulators},
+howpublished = {\url{https://quantiki.org/wiki/list-qc-simulators}},
+note = {Accessed: 2016-09-12},
+year={2016}
+}
