--- a/proposal_latex/proposal.bib
+++ b/proposal_latex/proposal.bib
@@ -188,3 +188,22 @@ howpublished = {\url{https://quantiki.org/wiki/list-qc-simulators}},
 note = {Accessed: 2016-09-12},
 year={2016}
 }
+
+@article{grover2002creating,
+  title={Creating superpositions that correspond to efficiently integrable probability distributions},
+  author={Grover, Lov and Rudolph, Terry},
+  journal={arXiv preprint quant-ph/0208112},
+  year={2002}
+}
+
+@article{ventura1999initializing,
+  title={Initializing the amplitude distribution of a quantum state},
+  author={Ventura, Dan and Martinez, Tony},
+  journal={Foundations of Physics Letters},
+  volume={12},
+  number={6},
+  pages={547--559},
+  year={1999},
+  publisher={Springer}
+}
+
