--- a/proposal_latex/proposal.tex
+++ b/proposal_latex/proposal.tex
@@ -193,28 +193,25 @@ Ideally, the outcome will already demonstrate observable quantum advantages over
 % Making clear that only 2 algorithms are used!
 The proposed research will be solely based on the two QML algorithms described in \cite{Schuld2014, Schuld2016}. Firstly, \cite{Schuld2014} is a quantum version of the distance weighted $k$-nearest neighbour (KNN) algorithm. For clarification, let us consider a training data set ${D}_{T}$ consisting of five vectors ${v}_{0}, {v}_{1},...$ that are each either assigned to class $A$ or $B$. Classical KNN is a non-parametric classifier that given an unclassified input vector $x$ considers the $k$ nearest neighbours (using a predefined measure of distance) and classifies $x$, based on a majority vote, as either $A$ or $B$. Thereby, $k$ is a positive integer and is usually chosen to be small. In the case of $k = all$, input vector $x$ would simply be assigned to the class with the most members. In this case, the training vectors can be given distance-dependent weights (such as $1/distance$) in order to increase the influence of closer vectors over more distant ones. The advantage of the quantum version is the parallel computation of the distance between each training vector and the input vector as well as contracting distance computation and the weighing into one computational step.
 
-Next, \cite{Schuld2016} details a quantum algorithm for a linear regression model for supervised pattern recognition. 
+Next, \cite{Schuld2016} details a quantum algorithm based on least-squares linear regression. In contrast to the discrete classes ($A$ or $B$) used in kNN, this algorithm focusses on continuous outputs and the task is to learn how to map inputs to continuous outputs after being trained on a training data set.
 %needs writing!
 %explain linear regression and sketch the quantum algorithm
 
-%%POSSIBLY THE TOOLS
+%%CHOOSING SMALL PROBLEMS AND GENERATING THE DATASET
+The first step towards their experimental implementation will be the identification of one or several small ML problems that can be executed on maximally nine qubits. For example, this might include the characterization of colours or differentiation of digits or letters. It thereby plays an important role if the respective ML problem can be approached using a very small dataset such as the average pixel brightness or the ratio of pixels above and below the bisector of the image. Ideally, the data should be representable as a 2-D vector such that it requires only a few qubits to encode the information quantum mechanically.
+
+%%THE TOOLS
 %maybe describe the possible tools here (liquid, IBM, python, etc.)
 %shortly introduce the IBM QC and what Liquid is
-There are two types of tools available for the implementation of the QML algorithms. Firstly, since current state-of-the-art quantum technology uses maximally nine qubits, a classical computer can still be used to simulate the behaviour of the QC. Such a software architecture is provided by Microsoft Research which has released the quantum simulation toolsuite Liqui$\ket{}$ based on the programming language F\#. There are many more QC simulator toolsuites available and the decision which to use depends on the selected QML problem and dataset \citep{quantiki}.
+There are two types of tools available for the implementation of the QML algorithms. Firstly, since current state-of-the-art quantum technology uses maximally nine qubits, a classical computer can still be used to simulate the behaviour of the QC. Such a software architecture is provided by Microsoft Research which has released the quantum simulation toolsuite Liqui$\ket{}$ based on the programming language F\#. There are many more QC simulator toolsuites available and the decision which one to use depends on the selected QML problem and dataset \citep{quantiki}.
 
-Secondly, earlier this year technology company IBM has enabled public access via the internet to their experimental quantum processor containing five non error-corrected superconducting qubits. Instead of only simulating on classical hardware, this opens up the possibility of executing the QML algorithm on actual quantum hardware. If it is possible to make use of IBM's QC is highly dependent on the dataset chosen. Furthermore, until this point it remains unclear if the algorithm in \cite{Schuld2016) can be executed using five qubits only.
-
-%%CHOOSING SMALL PROBLEMS AND GENERATING THE DATASET
-The first step towards their experimental implementation will be the identification of one or several small ML problems that can be executed on five qubits only. For example, this might include the characterization of colours or differentiation of digits or letters. It thereby plays an important role if the respective ML problem can be approached using a very reduced dataset such as the average pixel brightness or the ratio of pixels above and below the bisector of the image. Ideally, the data should be representable as a 2-D vector such that it requires only a few qubits to encode the information quantum mechanically.
+Secondly, earlier this year technology company IBM has enabled public access to their experimental quantum processor containing five non error-corrected superconducting qubits. Instead of only simulating on classical hardware, this opens up the possibility of executing the QML algorithm on actual quantum hardware. If it is possible to make use of IBM's QC is highly dependent on the dataset chosen. Furthermore, until this point it remains unclear if the algorithm in \cite{Schuld2016} can be executed using five qubits only.
 
 %%THE PROBLEM OF ENCODING THE DATA INTO QUANTUM STATES >> REFERENCE SOME PAPERS HERE
-Both algorithms assume that the classical data is readily available in the form of quantum states. Hence, the first crucial step will be translating the classical data into such states, constituting the first challenge since it is a non-trivial and still researched topic. For each algorithm, this will be done by applying a series of quantum logic gates to the qubits. 
+Both algorithms assume that the classical data is readily available in the form of quantum states. Hence, the first crucial step will be translating the classical data into such states, constituting the first challenge since it is a non-trivial and still researched topic. The quantum version of the distance weighted kNN requires a binary data string of length $n$ to be encoded one to one into $n$ qubits. This will be referred to as \textit{qubit encoding}. A possible algorithm for this type of data encoding was proposed by \cite{ventura1999initializing}. The quantum linear regression algorithm is based on so called \textit{amplitude encoding}, where the classical data is written into the amplitudes of quantum states which is more difficult to achieve than qubit encoding. Amplitude encoding is still a very active field of research and until now it can only be done with relatively uniform data sets. \cite{grover2002creating} described such an algorithm and special attention will be paid in choosing a suitable uniform dataset when using this algorithm.
 
 %%DESIGNING THE QUANTUM CIRCUITS
-Next, two separate quantum circuits consisting of quantum logic gates will be designed that accurately represent the two QML algorithms as outlined in the paper of \cite{Schuld2014, Schuld2016}.
-
-%%SOLUTION RETRIEVAL
-Finally, the computed solution needs to be retrieved through measurement and by repeating the execution of the algorithm a probabilty distribution will be obtained that ideally represents the solution to the given problem.
+Next, two separate quantum circuits consisting of quantum logic gates will be designed that accurately represent the two QML algorithms as outlined in the paper of \cite{Schuld2014, Schuld2016}. Each quantum circuit is then combined with its respective data encoding circuit. Finally, the computed solution needs to be retrieved by measuring specific qubits. By repeating the execution of the algorithms, a probability distribution over the qubit measurements is obtained that represents the solution to the given problem.
 
 To summarize, the steps needed for the successful implementation of a QML algorithm are given below.
 
